# quintiq-backend

./: .env.sample  .gitignore  README.md  docker-compose.yml  monitor_vertex_ai.sh  start.sh  stop.sh  test_vertex_ai.sh
.claude/: settings.local.json
claudedocs/: vertex-ai-refactoring-summary.md
docs/: ARCHITECTURE.md  AUTHENTICATION_GUIDE.md  CLAUDE.md  DATABASE.md  INITIAL_DATA_SETUP.md  README.md  문서_업데이트_요약_2026-02-01.md
docs/analysis/: FRED_데이터_분석_2026-02-01.md  데이터_형식_분석.md
docs/architecture/: ARCHITECTURE.md  KIS_토큰_관리.md  README.md  데이터베이스_마이그레이션_현황.md  데이터베이스_설계.md  마이그레이션_히스토리.md  (+5 more)
quantiq-core/: .gitignore  Dockerfile  TODO.md  build.gradle.kts  settings.gradle.kts
quantiq-data-engine/: .gitignore  Dockerfile  README.md  pyproject.toml
quantiq-data-engine/src/: config.py  db.py  main.py
quantiq-data-engine/src/core/: __init__.py  config.py  database.py  kafka.py
quantiq-data-engine/src/events/: handlers.py  publisher.py  schema.py
quantiq-data-engine/src/features/: __init__.py
quantiq-data-engine/src/features/economic_data/: __init__.py  repository.py  router.py  schemas.py  service.py
quantiq-data-engine/src/features/ml_package/: router.py
quantiq-data-engine/src/services/: data_collector.py  recommendation_service.py  sentiment_analysis.py  slack_notifier.py  technical_analysis.py
scripts/: MIGRATION_GUIDE.md  README.md  analyze_current_state.py  create-kafka-topics.sh  init_quantiq.sh  migrate_data.py  migrate_stocks_data.py  requirements.txt  run_migration.sh  setup_initial_data.py  sync_from_prod_mongodb.py  validate_migration.py
(+213 files in other folders)
